tests/liquid/neg/operators/add-03.js
/*@ foo :: (number) => {number | true} */
function foo(x){
  var y = "dog";
  return x + y; 
}
